@@ -34,7 +34,6 @@
 - (void) dealloc
 {
     [valueMatcher release];
-    
     [super dealloc];
 }
 
@@ -55,12 +54,13 @@
 
 - (void) describeTo:(id<HCDescription>)description
 {
-    [[description appendText:@"dictionary with value "]
+    [[description appendText:@"dictionary containing value "]
                   appendDescriptionOf:valueMatcher];
 }
 
 @end
 
+//--------------------------------------------------------------------------------------------------
 
 OBJC_EXPORT id<HCMatcher> HC_hasValue(id matcherOrValue)
 {
