@@ -15,6 +15,10 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 * Improved "hasEntry" description.
 
+* Improved "hasKey" description.
+
+* Improved "hasValue" description.
+
 
 == Version 1.2 ==
 
